# tarjamat-glossary-merger

./: .gitignore  CMakeLists.txt  README.md  glossary_master.cpp  glossary_master.h  main.cpp
glossary-csv-parser/: glossary_csv_parser.cpp  glossary_csv_parser.h
srt-parser/: srt_parser.cpp  srt_parser.h
utils/: logs.h  utils.h
